решение проблемы n+1